--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "npm run build",
     "prepare": "npm run build",
-    "build": "babel src --out-dir dist --source-maps --ignore test.js",
+    "build": "babel src --out-dir dist --source-maps --ignore \"src/__fixtures__/**/*.js\",\"src/**/*.test.js\"",
     "test": "jest --verbose",
     "test:update": "jest --verbose -u",
     "test:watch": "jest --watch --verbose",
@@ -39,19 +39,15 @@
   ],
   "author": "Tomek Fijoł <tomekfijol@gmail.com> (http://tomekf.pl/)",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
-    "@tomekf/storage-mock": "^1.0.2",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-plugin-add-module-exports": "^0.3.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "eslint": "4.19.1",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "^10.0.3",
+    "eslint": "6.1.0",
     "eslint-config-airbnb-base": "13.0.0",
     "eslint-plugin-babel": "5.1.0",
-    "eslint-plugin-import": "2.12.0",
-    "jest": "^23.4.1"
+    "eslint-plugin-import": "2.18.2",
+    "jest": "^25.1.0"
   }
 }
